# linux_qt4_clion_template

./: .main.cpp.swp  CMakeLists.txt  README.md  main.cpp
